--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@mixin box-sizing {
+  -moz-box-sizing : border-box;
+  -webkit-box-sizing:border-box;
+  box-sizing: border-box;
+}
+
 $crimson: #DC143C;
 
 body{
@@ -32,4 +38,12 @@ footer{
   p {
     color: #FFF;
   }
+}
+
+/* Misc */
+.debug_dump {
+  margin: 0 auto;
+  width: 60%;
+  margin-top: 45px;
+  @include box-sizing
 }
