Stylisation du profil utilisateur | Close #4

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -47,3 +47,18 @@ footer{
   margin-top: 45px;
   @include box-sizing
 }
+
+/* Sidebar */
+aside {
+  section{
+    padding: 10px 0;
+    h1{
+      font-size: 140%;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
