--- a/app/views/utilisateur/show.html.erb
+++ b/app/views/utilisateur/show.html.erb
@@ -1,1 +1,11 @@
-<%= @utilisateur.nom %>, <%= @utilisateur.email %>
+<%= provide(:title, @utilisateur.nom) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="info-utilisateur">
+      <h1>
+        <%= gravatar_for @utilisateur %>
+        <%= @utilisateur.nom %>
+      </h1>
+    </section>
+  </aside>
+</div>
