modif avant changement de branche

--- a/app/views/statique/accueil.html.erb
+++ b/app/views/statique/accueil.html.erb
@@ -3,5 +3,5 @@
 <div class="center jumbetron">
   <h1>Bienvenue !</h1>
   <p>&darr; POur vous inscrire, cliquer simplement sur le bouton ci-dessous &darr;</p>
-  <%= link_to "S'inscrire maintenant", "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to "S'inscrire maintenant", "/signup", class: "btn btn-lg btn-primary" %>
 </div>
