--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -62,3 +62,11 @@ aside {
   float: left;
   margin-right: 10px;
 }
+
+/* Formulaire */
+input{
+  border: 1px solid rgb(182, 182, 182);
+  width: 100%;
+  margin-bottom: 15px;
+  @include box-sizing;
+}
